Fix k8s and docker-compose.yaml and jwt token

--- a/backend/deployments/k8s/base/kustomization.yaml
+++ b/backend/deployments/k8s/base/kustomization.yaml
@@ -1,4 +1,8 @@
 resources:
+  - nginx-ingress.yaml
+
   - identity-deployment.yaml
   - identity-service.yaml
-  - identity-ingress.yaml
+
+  - wallet-deployment.yaml
+  - wallet-service.yaml
