--- a/backend/deployments/k8s/base/wallet-ingress.yaml
+++ b/backend/deployments/k8s/base/wallet-ingress.yaml
@@ -1,18 +1,18 @@
 #apiVersion: networking.k8s.io/v1
 #kind: Ingress
 #metadata:
-#  name: krypton-identity-ingress
+#  name: krypton-wallet-ingress
 #  namespace: default
 #spec:
 #  ingressClassName: nginx
 #  rules:
-#    - host: identity.api.krypton.local
+#    - host: wallet.api.krypton.local
 #      http:
 #        paths:
 #          - path: /
 #            pathType: Prefix
 #            backend:
 #              service:
-#                name: krypton-identity-service
+#                name: krypton-wallet-service
 #                port:
 #                  number: 8080
