--- a/backend/deployments/k8s/base/wallet-service.yaml
+++ b/backend/deployments/k8s/base/wallet-service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: krypton-identity-service
+  name: krypton-wallet-service
 spec:
   selector:
-    app: krypton-identity-deployment
+    app: krypton-wallet-deployment
   ports:
     - protocol: TCP
       port: 8080
