--- a/backend/deployments/k8s/overlays/prod/ingress-patch.yaml
+++ b/backend/deployments/k8s/overlays/prod/ingress-patch.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: catalog-ingress
+  name: identity-ingress
 spec:
   rules:
     - host: blackshop.com
