--- a/backend/deployments/k8s/overlays/stg/kustomization.yaml
+++ b/backend/deployments/k8s/overlays/stg/kustomization.yaml
@@ -5,4 +5,4 @@ patches:
   - path: replicas-patch.yaml
     target:
       kind: Deployment
-      name: catalog-deployment
+      name: identity-deployment
